# orchestrator

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
bridges/ri/: Dockerfile  README.md  pyproject.toml
bridges/ri/src/bridge_ri/: __init__.py  agent_card.py  config.py  executor.py  server.py
bridges/ri/tests/: test_executor.py
deploy/: Dockerfile  configmap-orchestrator-agents.yaml  configmap-orchestrator-config.yaml  configmap-orchestrator-prompts.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
deploy/bridge-ri/: deployment.yaml  networkpolicy.yaml  service.yaml
docs/: 01_ORCH_技術仕様書.md  01_ORCH_機能要件.md  実装フェーズ計画書.md
docs/e2e-2026-05-10/: PLAN-ta-new-fix.md  REPORT.md
docs/e2e-2026-05-11/: REPORT.md
docs/e2e-2026-05-11b/: REPORT.md
docs/e2e-2026-05-12/: REPORT.md
docs/e2e-2026-05-12-langfuse/: REPORT.md
docs/e2e-2026-05-14-multi-agent/: REPORT.md
docs/e2e-2026-05-16-thinking-ui/: REPORT.md
docs/runbooks/: a2a_client.md  pending_user_actions.md
eval/runs/: SUMMARY.md
eval/runs/2026-04-27-iter1/: report.md
eval/runs/2026-04-27-iter2/: report.md
eval/runs/2026-04-27-iter3/: report.md
specs/001-orch-monthly-inventory/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-orch-monthly-inventory/checklists/: requirements.md
specs/001-orch-monthly-inventory/contracts/: a2a-task-api.yaml  chat-approval-contract.md
src/orchestrator/: __init__.py  app.py  config.py
src/orchestrator/a2a_client/: __init__.py  auth.py  client.py  errors.py
src/orchestrator/agent/: __init__.py  context.py  runtime.py  tools.py
tests/unit/: test_a2a_client.py  test_otel_setup.py  test_registry_policy.py  test_runtime_prompt.py  test_tool_summary.py  test_tools.py
(+20 files in other folders)
